--- a/Notes/Unit2/Unit2.tex
+++ b/Notes/Unit2/Unit2.tex
@@ -623,7 +623,7 @@
     \end{itemize}
     \item Another parallel example: \ce{2L_nM + 2RX -> 2L_nM-X + R-R}.
     \begin{itemize}
-        \item For example, \ce{Cp^*_2Yb(OEt2) + CH2Cl2 -> 2Cp^*_2Yb-Cl + ClCH2-CH2Cl}.
+        \item For example, \ce{Cp^*2Yb(OEt2) + CH2Cl2 -> 2Cp^*2Yb-Cl + ClCH2-CH2Cl}.
         \item This can also occur through a radical mechanism. We form an \ce{R*} radical that can recombine to form \ce{R-R} or make \ce{M-R}.
     \end{itemize}
     \item Stereochemistry of S\textsubscript{N}2 type reactivity.
@@ -1129,7 +1129,7 @@
         \item First quasi-stable example: \ce{FeCp(CO)2Et} has $18\,\e[-]$. Over time, however, UV light causes it to lose a carbonyl group and form an ethylene olefin hydride (as from a reverse 1,2-migration).
         \item They began to use alkyl ligands with no $\beta$-hydrogens or unreactive $\beta$-hydrogens.
         \begin{itemize}
-            \item They made compounds such as \ce{W(CH3)6}, \ce{M-CH2-Ph}, \ce{M-CH2-{$t$-}Bu}, and \ce{M-CH2-TMS}.
+            \item They made compounds such as \ce{W(CH3)6}, \ce{M-CH2-Ph}, \ce{M-CH2-{$t$-}Bu}, and \ce{M-CH2-TMS}\footnote{TMS is \underline{t}ri\underline{m}ethyl\underline{s}ilyl, a ligand of the structure \ce{SiMe3}.}.
             \item 1-adamantyl, norbornyl have $\beta$-hydrogens, but elimination is disfavored by ring strain.
             \item Fluoroalkyls and metallacycles were also attractive. A fluoroalkyl will not undergo hydride elimination [obviously], but halide elimination is a possible issue. Metallacycles cannot adopt a syn-coplanar arrangement to eliminate.
             \item \ce{M-C#C-H} as well (the $\beta$-hydrogen is once again in the wrong position).
@@ -1971,10 +1971,238 @@
     \end{figure}
     \begin{itemize}
         \item There's a lot of interest in bonding \ce{CO2} to transition metals in terms of catalytic reduction/functionalization of \ce{CO2}.
+        \item What is $\kappa^1$ bonding?
     \end{itemize}
     \item Aldehydes / ketones.
     \begin{itemize}
         \item Binding $\eta^2$ and end-on through the oxygen.
+    \end{itemize}
+\end{itemize}
+
+
+
+\section{Hydrides and Silyls}
+\begin{itemize}
+    \item \marginnote{4/21:}\ce{M-SiR3} (silyl).
+    \begin{itemize}
+        \item $1\,\e[-]$ X-type donor.
+        \item Closely related to alkyls, but with some important differences (esp. with regard to synthesis and properties).
+        \item Important role in a number of catalytic processes (esp. hydrosilylations).
+        \item First synthesis reported by Wilkinson in 1956.
+        \begin{itemize}
+            \item He reacted \ce{Fp- ->[TMSCl] CpFe(CO)2(SiMe3)}.
+        \end{itemize}
+        \item The bonding is more covalent than with carbon since silicon is more electropositive.
+    \end{itemize}
+    \item Synthesis of silyls:
+    \begin{enumerate}
+        \item Electrophilic:
+        \begin{itemize}
+            \item Mid to late TM's.
+            \item Note that $\beta$-\ce{H} elimination is not a problem typically as \ce{Si=CR2} bonds are not stable (unless you add a lot of steric bulk).
+            \begin{itemize}
+                \item Thus, \ce{SiMe3} does not undergo $\beta$-\ce{H} elimination.
+            \end{itemize}
+        \end{itemize}
+        \item Oxidative addition: \ce{L_nM^0 + HSiR3 <=> L_nMH(SiR3)}.
+        \begin{itemize}
+            \item Almost always occurs through \ce{Si-H} bonds.
+            \item \ce{C-H} addition can be quite hard, but \ce{Si-H} addition can be quite easy.
+            \begin{itemize}
+                \item Thus, for example, \ce{HSiR2Cl} will add through the \ce{Si-H} bond, not the \ce{Si-Cl} bond since the latter are thermodynamically strong.
+            \end{itemize}
+            \item \ce{Si-H} bonds form and break in a mobile and dynamic equilibrium.
+            \begin{itemize}
+                \item The larger orbital radius of silicon helps form the $\sigma$ adducts.
+            \end{itemize}
+        \end{itemize}
+        \item Nucleophilic: \ce{SiR3-} is very rare, so this is uncommon.
+        \begin{itemize}
+            \item There are some examples, though.
+            \begin{itemize}
+                \item You can make \ce{LiSiMePh2} in-situ.
+                \item You can also make \ce{(THF)3LiSi(TMS)3} and then crystalize it for storage (this compound is known as super silyl).
+                \item Lastly, \ce{Cp2ZrCl2 + LiSi(TMS)3 -> Cp2ZrCl(Si(TMS)3)}.
+            \end{itemize}
+        \end{itemize}
+    \end{enumerate}
+    \item \ce{M-H} (hydrides and \ce{H2} adducts).
+    \begin{itemize}
+        \item Pure (and strong) $\sigma$ donors and strong field ligands.
+        \item Important intermediates in
+        \begin{enumerate}[label={\alph*)}]
+            \item Olefin/alkyne hydrogenations.
+            \item Isomerizations/polymerizations of olefins.
+            \item Hydroformylations.
+            \item Decarbonylations.
+            \item Hydrogen/deuterium (H/D) exchange.
+        \end{enumerate}
+        \item Many important structures:
+        \begin{itemize}
+            \item For example, there are hydrides supported by phosphine ligands, \emph{trans} to carbonyls, \emph{cis} to carbonyls, Cp metal hydrides, and binary hydrides such as \ce{ReH9^2-} (which is face capped trigonal prismatic).
+            \item Bridging hydrides: \ce{M-H-M}, \ce{MHM2}, and interstitial hydrides (which is a hydrogen surrounded octahedrally by metals in a solid). Interstitial hydrides are important in solid state hydrogenation catalysts (such as \ce{Pd} / \ce{H2}).
+        \end{itemize}
+    \end{itemize}
+    \item Bond properties of hydrides:
+    \begin{itemize}
+        \item Hydrides are small compared to typical ligands.
+        \begin{itemize}
+            \item Thus, for example, \ce{ML4H} will not be trigonal bipyramidal but almost tetrahedral, with the equatorial ligands bending downwards toward the hydride.
+            \item The distance between the equatorial ligand plane in \ce{ML5} and \ce{ML4H} is denoted by $d$.
+        \end{itemize}
+        \item Jim Ibers (emeritus professor at Northwestern) studied various compounds and their $d$ values vs. the \emph{trans} ligand.
+        \begin{itemize}
+            \item Several examples are listed.
+            \item What he found is that bigger ligands make more tetrahedral structures.
+        \end{itemize}
+        \item The most tetrahedral structures show up as $T_d$ without the hydride in X-ray diffraction since X-rays scatter off of electrons and hydrides have basically none.
+        \begin{itemize}
+            \item Thus, you need neutron diffraction (which requires really big solid state crystals).
+        \end{itemize}
+    \end{itemize}
+    \item Electronegativity trends in hydrides:
+    \begin{itemize}
+        \item In general: \chemfig{\charge{90[yshift=1mm]=$\oplus$}{M}-\charge{90[yshift=1mm]=$\ominus$}{H}}
+        \item Early metal hydrides are very polar and anionic; late transition metal hydrides are more covalent.
+        \item Hydrides can react like \ce{H+}, \ce{H*}, and \ce{H-}.
+        \item Electronegativity trends can influence reactivity.
+        \item Hydries acting as acids:
+        \begin{itemize}
+            \item \ce{HCo(CO)4 <=> H+ + Co(CO)4-}, $\pKa<0$ (favorable).
+            \item \ce{HCo(CN)5^3- <=> H+ + Co(CN)5^4-}, $\pKa>20$ (unfavorable).
+            \item Think about the electronegativity and how electron rich or poor a metal center to determine whether or not it will want to ionize.
+        \end{itemize}
+        \item Hydrides acting as classic hydrides:
+        \begin{itemize}
+            \item \ce{Cp^*2ZrH2 ->[HCl] H2 + Cp^*2ZrHCl}.
+            \item \ce{Cp^*2ZrH2 ->[2 O=CH2] Cp^*2Zr(OCH3)2}.
+        \end{itemize}
+        \item Hydrides acting somewhere in-between these two extremes (actin acidic and hydritic):
+        \begin{itemize}
+            \item \ce{Cp2MoH2 ->[LDA] [Cp2MoH^- Li]4}.
+            \item Note that LDA is a strong base.
+            \item \ce{Cp2MoH2 <=>[H+] Cp2MoH3+}.
+            \item Note that \ce{H+} is just a generic acid, and the product is an \ce{H2} adduct.
+        \end{itemize}
+        \item Radical:
+        \begin{itemize}
+            \item \ce{M-H -> M* + H*}.
+            \item The classic example of this is \ce{(CO)5Mn-H} which can homolyze pretty easily.
+        \end{itemize}
+    \end{itemize}
+    \item Synthesis of hydrides (the first four are fundamental reactions, but the latter ones are also important):
+    \begin{enumerate}
+        \item \ce{H2} directly:
+        \begin{itemize}
+            \item \ce{CoS + [CO + H2] ->[$\SI{200}{atm}$][Cu / $\SI{200}{\celsius}$] HCo(CO)4 + CuS}.
+            \begin{itemize}
+                \item \ce{[CO + H2]} is a mixture of the two gasses known as Syn gas.
+                \item The key to making this reaction proceed is just temperature and pressure. Catalysts can also help.
+            \end{itemize}
+            \item \ce{FeI2 + PF3 + H2 ->[$\SI{100}{atm}$][Zn / $\SI{250}{\celsius}$] H2Fe(PF3)4 + ZnI2}.
+            \begin{itemize}
+                \item Zinc serves as a reductant here.
+            \end{itemize}
+            \item Other examples exist, but no more are shown.
+        \end{itemize}
+        \item Protonation of metal anions:
+        \begin{itemize}
+            \item \ce{Ru(CO)5 ->[Na][-CO]Na2Ru(CO)4 ->[HA] H2Ru(CO)4}.
+            \item Similar chemistry exists with \ce{Os} and \ce{Fe}.
+        \end{itemize}
+        \item Oxidative addition across a \ce{M-M} bond.
+        \begin{itemize}
+            \item \ce{Cp(CO)3Cr-Cr(CO)3Cp ->[H2] 2CpCr(CO)3H}.
+            \item \ce{Os3(CO)12 ->[H2][$\SI{80}{atm}$] H2Os(CO)4}.
+        \end{itemize}
+        \item Oxidative addition to a single metal center.
+        \begin{itemize}
+            \item \ce{IrCl(CO)(PPh3)2 ->[H2] IrClH2(CO)(PPh3)2}.
+            \item \ce{HCo(N2)(PPh3)3 ->[-N2][H2] H3Co^{III}(PPh3)3}
+        \end{itemize}
+        \item Hydrogenations of \ce{M-L} bonds with \ce{H2}.
+        \begin{itemize}
+            \item \ce{M-R + H2 -> [MRH2]^{$\ddagger$} -> M-H + R-H}.
+            \item \ce{M-OR + H2 -> M-H + HOR}.
+            \begin{itemize}
+                \item Much harder to do since the \ce{M-O} bond is typically more ionic, and thus stronger.
+            \end{itemize}
+            \item Example: \ce{Cp^*2Ta(CH3)4 ->[H2] Cp^*2TaH4 + 4CH4}.
+            \begin{itemize}
+                \item This reaction must proceed through $\sigma$-bond metathesis.
+            \end{itemize}
+        \end{itemize}
+        \item Electrophilic metal centers with hydride reagents.
+        \begin{itemize}
+            \item \ce{L3IrCl2 ->[LAlH][THF] IrH3L3 + H3Al-THF}.
+            \item \ce{Cp2ZrCl2 ->[BH4-] Cp2Zr(BH4)2 ->[NR3] [Cp2ZrH2]2 + R3N-BH3}.
+        \end{itemize}
+        \item $\beta$-\ce{H} elimination.
+        \begin{figure}[h!]
+            \centering
+            \begin{subfigure}[b]{0.9\linewidth}
+                \centering
+                \schemestart
+                    \chemfig{M-X-CHR_2}
+                    \arrow
+                    \chemfig{M(-[1]H)-[7]\phantom{i}-[1,0.4,,,white]X=[5]R_2C}
+                \schemestop
+                \caption{General case.}
+                \label{fig:beta-H-synthesizeMetalHydridesa}
+            \end{subfigure}
+            \vspace{1em}
+            \begin{subfigure}[b]{0.49\linewidth}
+                \centering
+                \schemestart
+                    \chemfig{M-[:30]-[:-30]}
+                    \arrow
+                    \chemfig{M(-[1]H)-[7]\phantom{i}-[1,0.4,,,white]=[5]}
+                \schemestop
+                \caption{Simplest case.}
+                \label{fig:beta-H-synthesizeMetalHydridesb}
+            \end{subfigure}
+            \begin{subfigure}[b]{0.49\linewidth}
+                \centering
+                \schemestart
+                    \chemfig{M-[:30]O-[:-30]CH_3}
+                    \arrow
+                    \chemfig{M(-[1]H)-[7]\phantom{i}-[1,0.4,,,white]O=[5](-[4]H)(-[6]H)}
+                \schemestop
+                \caption{Alternate case.}
+                \label{fig:beta-H-synthesizeMetalHydridesc}
+            \end{subfigure}
+            \caption{$\beta$-\ce{H} elimination synthesis of metal hydrides.}
+            \label{fig:beta-H-synthesizeMetalHydrides}
+        \end{figure}
+        \begin{itemize}
+            \item The relative direction of the equilibrium depends on the system, but this can definitely happen.
+            \item Goes over how to isolate osmium from osmium ore.
+        \end{itemize}
+    \end{enumerate}
+    \item Non-classical and paramagnetic hydrides.
+    \begin{figure}[h!]
+        \centering
+        \begin{subfigure}[b]{0.3\linewidth}
+            \centering
+            \chemfig{L_{\emph{n}}M(-[1]H)(-[7]H)}
+            \caption{General dihydride.}
+            \label{fig:nonclassicalHydridea}
+        \end{subfigure}
+        \begin{subfigure}[b]{0.3\linewidth}
+            \centering
+            \chemfig{L_{\emph{n}}M-[,,,,{stealth-}]\phantom{i}-[2,0.33,,,white]H-[6]H}
+            \caption{General \ce{H2} adduct.}
+            \label{fig:nonclassicalHydrideb}
+        \end{subfigure}
+        \caption{Non-classical hydrides.}
+        \label{fig:nonclassicalHydride}
+    \end{figure}
+    \begin{itemize}
+        \item \ce{L_nMH2} could be a dihydride or an \ce{H2} adduct (or some resonance structure in between). The latter is a non-classical hydride.
+        \item We distinguish between the two with NMR spectroscopy since \ce{{}^1H} hydrides are usually upfield ($-1$ to $\SI{-15}{ppm}$).
+        \item A \ce{T1} relaxation also provides the \ce{H-H} distance.
+        \item Lastly, \ce{H1D} isotopologues give you a \ce{H-D} coupling constant, which can be correlated to bond distances.
+        \item If you have paramagnetic complexes, this is much harder, so you have to use special techniques such as ENDOR  spectroscopy.
     \end{itemize}
 \end{itemize}
 
