--- a/preamble.tex
+++ b/preamble.tex
@@ -9,7 +9,7 @@
 \usepackage{xr}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{physics,siunitx,bm}
-\usepackage{mhchem,chemfig,chemformula}
+\usepackage{mhchem,chemfig,chemformula,chemmacros}
 \usepackage{tikz,graphicx}
 \usepackage{float,subcaption}
 \usepackage{tabularx}
